--- a/zsh/.zcompdump-sewer-5.9
+++ b/zsh/.zcompdump-sewer-5.9
@@ -1,4 +1,4 @@
-#files: 804	version: 5.9
+#files: 809	version: 5.9
 
 _comps=(
 '-' '_precommand'
@@ -211,6 +211,7 @@ _comps=(
 'cabal' '_cabal'
 'cal' '_cal'
 'calendar' '_calendar'
+'cargo' '_cargo'
 'cat' '_cat'
 'catchsegv' '_precommand'
 'cc' '_gcc'
@@ -335,6 +336,7 @@ _comps=(
 'doas' '_doas'
 'domainname' '_yp'
 'dos2unix' '_dos2unix'
+'dotnet' '_dotnet'
 'drill' '_drill'
 'dropbox' '_dropbox'
 'dropdb' '_postgresql'
@@ -814,6 +816,7 @@ _comps=(
 'mencal' '_mencal'
 'mere' '_mere'
 'merge' '_rcs'
+'meson' '_meson'
 'metaflac' '_flac'
 'mformat' '_mtools'
 'mgv' '_pspdf'
@@ -904,6 +907,7 @@ _comps=(
 'nginx' '_nginx'
 'ngrep' '_ngrep'
 'nice' '_nice'
+'ninja' '_ninja'
 'nkf' '_nkf'
 'nl' '_nl'
 'nm' '_nm'
@@ -953,6 +957,7 @@ _comps=(
 'paplay' '_pulseaudio'
 'parec' '_pulseaudio'
 'parecord' '_pulseaudio'
+'pass' '_pass'
 'passwd' '_users'
 'paste' '_paste'
 'pasuspender' '_pulseaudio'
@@ -1650,10 +1655,11 @@ bindkey '^[,' _history-complete-newer
 bindkey '^[/' _history-complete-older
 bindkey '^[~' _bash_complete-word
 
-autoload -Uz _bootctl _busctl _coredumpctl _curl _flameshot \
-            _hostnamectl _insmod _journalctl _kernel-install _libinput \
-            _localectl _loginctl _lsmod _machinectl _mkinitcpio \
-            _networkctl _oomctl _pacman _pip _pulseaudio \
+autoload -Uz _bootctl _busctl _cargo _coredumpctl _curl \
+            _dkms _dotnet _flameshot _hostnamectl _insmod \
+            _journalctl _kernel-install _libinput _localectl _loginctl \
+            _lsmod _machinectl _meson _mkinitcpio _networkctl \
+            _ninja _oomctl _pacman _pass _pulseaudio \
             _resolvectl _rmmod _run0 _sd_hosts_or_user_at_host _sd_machines \
             _sd_outputmodes _sd_unit_files _systemctl _systemd _systemd-analyze \
             _systemd-delta _systemd-inhibit _systemd-nspawn _systemd-path _systemd-run \
@@ -1816,5 +1822,5 @@ autoload -Uz +X _call_program
 typeset -gUa _comp_assocs
 _comp_assocs=( '' )
 
-#omz revision: f97e871c33da57d20e1b0411da6b1674126192a9
+#omz revision: 959b6cf5eed78f108dc6e0f46b53816f5168dd3a
 #omz fpath: /home/ynv/.dotfiles/zsh/ohmyzsh/plugins/git /home/ynv/.dotfiles/zsh/ohmyzsh/functions /home/ynv/.dotfiles/zsh/ohmyzsh/completions /home/ynv/.dotfiles/zsh/ohmyzsh/custom/functions /home/ynv/.dotfiles/zsh/ohmyzsh/custom/completions /home/ynv/.dotfiles/zsh/ohmyzsh/cache/completions /usr/local/share/zsh/site-functions /usr/share/zsh/site-functions /usr/share/zsh/functions/Calendar /usr/share/zsh/functions/Chpwd /usr/share/zsh/functions/Completion /usr/share/zsh/functions/Completion/Base /usr/share/zsh/functions/Completion/Linux /usr/share/zsh/functions/Completion/Unix /usr/share/zsh/functions/Completion/X /usr/share/zsh/functions/Completion/Zsh /usr/share/zsh/functions/Exceptions /usr/share/zsh/functions/MIME /usr/share/zsh/functions/Math /usr/share/zsh/functions/Misc /usr/share/zsh/functions/Newuser /usr/share/zsh/functions/Prompts /usr/share/zsh/functions/TCP /usr/share/zsh/functions/VCS_Info /usr/share/zsh/functions/VCS_Info/Backends /usr/share/zsh/functions/Zftp /usr/share/zsh/functions/Zle
